--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Custom file/folders
 .idea/
-user_data/
+user_data/refresh_token.json
+user_data/credentials.json
