--- a/templates/config.json
+++ b/templates/config.json
@@ -1,4 +1,3 @@
 {
-  "bot_token": "Paste here your bot token, check https://core.telegram.org/bots#6-botfather",
-  "allowed_user": 12345678
+  "bot_token": "Paste here your bot token, check https://core.telegram.org/bots#6-botfather"
 }
